# secureot-agent

./: .gitignore  Cargo.toml  Dockerfile  README.md  analyze_ot_traffic.py  docker-compose.yml  pcap_fixer.py  simulate_commits.sh  update_structure.sh
config/: agent.toml  descriptions.toml
docs/: agent-config.md  api.md  config.md  metrics.md  utils.md
docs/hugo/: config.toml
docs/hugo/content/: metrics.md  utils.md
docs/hugo/content/docs/: agent-config.md  api.md  config.md
scripts/: install.sh  rotate_logs.sh
sniffer_remote_pcap/: Cargo.toml  README.md  config.yaml
sniffer_remote_pcap/src/: main.rs
sniffer_span_forwarder/: Cargo.toml  README.md  config.yaml
sniffer_span_forwarder/src/: main.rs
sniffer_span_pcap/: Cargo.toml  README.md  config.yaml
sniffer_span_pcap/src/: main.rs
src/: api.rs  capture.rs  config.rs  main.rs  metrics.rs  receive.rs  transmit.rs  utils.rs
tests/: api_test.rs  capture_test.rs  config_test.rs  metrics_test.rs  transmit_test.rs  utils_test.rs
