[package]
name = "secureot-agent"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
pnet = "0.31.0"
native-tls = "0.2"
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
prometheus = "0.13"
clap = { version = "4.2", features = ["derive"] }
