[package]
name = "secureot-agent"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
pnet = { version = "0.31", features = ["std"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
prometheus = "0.13"
clap = { version = "4.2", features = ["derive"] }
